--- a/public/login.css
+++ b/public/login.css
@@ -87,6 +87,7 @@ h1, h2, h3, h4, h5, h6, a {
   color:#f2f2f2;
   text-decoration:underline;
   cursor:pointer;
+  font-size:150%;
 }
 
 /*Media Querie*/
